--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
   mobile_scanner: ^5.1.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
