--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.2.3
   mobile_scanner: ^5.1.1
   http: ^1.2.1
+  permission_handler: ^11.3.1
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
