--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.1
   permission_handler: ^11.3.1
   geolocator: ^12.0.0
+  maps_toolkit: ^3.0.0
 
 dev_dependencies:
   flutter_test:
