Missing the workmanager and there is a bug when quitting the measure screen too fast

--- a/tb_app_rqm/ios/Runner/Info.plist
+++ b/tb_app_rqm/ios/Runner/Info.plist
@@ -60,6 +60,7 @@
     <string>This app needs access to location.</string>
     <key>UIBackgroundModes</key>
     <array>
+        <string>processing</string>
     	<string>fetch</string>
     	<string>location</string>
     </array>
