--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   geolocator: ^12.0.0
   maps_toolkit: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/pictures/LogoSimple.png"
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
