--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -31,17 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  shared_preferences: ^2.2.3
-  mobile_scanner: ^5.1.1
-  http: ^1.2.1
-  permission_handler: ^11.3.1
-  geolocator: ^12.0.0
-  maps_toolkit: ^3.0.0
-  flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.3      # For storing data locally
+  mobile_scanner: ^5.1.1          # For scanning QR codes
+  http: ^1.2.1                    # For making HTTP requests
+  permission_handler: ^11.3.1     # For handling permissions
+  geolocator: ^12.0.0             # For getting the user's location
+  maps_toolkit: ^3.0.0            # For calculating distances between two points
+  flutter_launcher_icons: ^0.13.1 # For changing the app icon
 
 dev_dependencies:
   flutter_test:
@@ -71,11 +67,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  # Image of the logo as text and as a simple image
   assets:
     - assets/pictures/LogoSimple.png
     - assets/pictures/LogoText.png
