finalize info screen and rework main design

--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+7
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -39,6 +39,8 @@ dependencies:
   maps_toolkit: ^3.0.0            # For calculating distances between two points
   flutter_launcher_icons: ^0.13.1 # For changing the app icon
   simple_circular_progress_bar: ^1.0.2
+  package_info_plus: ^4.0.0       # Update this dependency version
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
