--- a/tb_app_rqm/android/app/src/main/AndroidManifest.xml
+++ b/tb_app_rqm/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="La roue qui marche"
+        android:label="LRQM"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
