--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+8
+version: 1.0.0+9
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_map: ^7.0.2
   shared_preferences: ^2.2.3      # For storing data locally
   mobile_scanner: ^5.1.1          # For scanning QR codes
   http: ^1.2.1                    # For making HTTP requests
@@ -39,8 +39,9 @@ dependencies:
   maps_toolkit: ^3.0.0            # For calculating distances between two points
   flutter_launcher_icons: ^0.13.1 # For changing the app icon
   simple_circular_progress_bar: ^1.0.2
-  package_info_plus: ^4.0.0       # Update this dependency version
+  package_info_plus: ^4.2.0       # Update this dependency version
   url_launcher: ^6.3.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
