--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
     - assets/pictures/LogoSimpleAnimated.gif
     - assets/pictures/question.png
     - assets/pictures/LauncherLogo.png
+    - assets/pictures/DrawPosition-removebg.png
+    - assets/pictures/DrawTeam-removebg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
