--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/pictures/DrawPosition-removebg.png
     - assets/pictures/DrawTeam-removebg.png
     - assets/pictures/DrawScan-removebg.png
+    - assets/pictures/HEIG_VD.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
