--- a/tb_app_rqm/pubspec.yaml
+++ b/tb_app_rqm/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   package_info_plus: ^4.2.0       # Update this dependency version
   url_launcher: ^6.3.1
   latlong2: ^0.9.1
+  path_provider: ^2.0.11
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
