--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -29,16 +29,19 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Build Android App
-        run: flutter build appbundle --release
-
       - name: Decode Keystore
         run: |
-          echo "${{ secrets.ANDROID_SIGNING_KEY_B64 }}" | base64 -d > android-signing-key.jks
+          echo "${{ secrets.ANDROID_SIGNING_KEY_B64 }}" | base64 -d > android/key.jks
 
-      - name: Sign AAB
+      - name: Configure Key Properties
         run: |
-          jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 -keystore android-signing-key.jks -storepass ${{ secrets.ANDROID_KEYSTORE_PASSWORD }} -keypass ${{ secrets.ANDROID_KEY_PASSWORD }} build/app/outputs/bundle/release/app-release.aab ${{ secrets.ANDROID_KEY_ALIAS }}
+          echo "storeFile=android/key.jks" > android/key.properties
+          echo "storePassword=${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}" >> android/key.properties
+
+      - name: Build Android App
+        run: flutter build appbundle --release
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
