disable ios for now

--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -1,41 +1,41 @@
-name: iOS Release
+# name: iOS Release
 
-on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
+# on:
+#   push:
+#     branches:
+#       - main
+#       - develop
+#   pull_request:
+#     branches:
+#       - main
+#       - develop
 
-jobs:
-  build-and-release:
-    name: Build and Release iOS App
-    runs-on: macos-latest
+# jobs:
+#   build-and-release:
+#     name: Build and Release iOS App
+#     runs-on: macos-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.24.3'
+#       - name: Set up Flutter
+#         uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: '3.24.3'
 
-      - name: Install Dependencies
-        run: flutter pub get
+#       - name: Install Dependencies
+#         run: flutter pub get
 
-      - name: Install CocoaPods
-        run: pod install --repo-update
-        working-directory: ios
+#       - name: Install CocoaPods
+#         run: pod install --repo-update
+#         working-directory: ios
 
-      - name: Build iOS App
-        run: flutter build ipa --release
+#       - name: Build iOS App
+#         run: flutter build ipa --release
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: LRQM-app--iOS
-          path: build/ios/ipa/*.ipa
+#       - name: Upload Artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: LRQM-app--iOS
+#           path: build/ios/ipa/*.ipa
